--- a/bangor_rewards/rewards_app/templates/rewards_app/friends.html
+++ b/bangor_rewards/rewards_app/templates/rewards_app/friends.html
@@ -1,19 +1,25 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'rewards_app/style.css' %}" />
 
-<h1>rewards_app</h1>
+<h1>Friends List</h1>
+<h3>Bangor Savings Rewards App</h3>
 
-<form action="/add-friendy/" method="post">
+
+<form action="/add-friend/" method="post">
 
     {% csrf_token %}
     {{ form.friend_name }}
 
-    <input type="submit" value="Submit" />
+    <input type="submit" value="Add Friend"/>
 
     {% csrf_token %}
     {{ form.friend_list }}
 
-    {% csrf_token %}
-    {{ users }}
+
+<h4>List of Users (name:points)</h4>
+{% for u in users %}
+    {{ u.name }}:
+    {{ u.current_points }},
+{% endfor %}
 
 </form>
