--- a/bangor_rewards/rewards_app/templates/rewards_app/home.html
+++ b/bangor_rewards/rewards_app/templates/rewards_app/home.html
@@ -129,7 +129,7 @@
                 <div class="card friendUpdate">
                     <div class="profilePic" style="background-color: #FF0000"></div>
                     <div class=" text textSmall friendUpdateUsername">
-                        {{ line.user }}
+                        {{ line.profile }}
                     </div>
                     <div class=" text textSmall gray friendUpdateText">
                         {{ line }}
